# libswcs

./: CMakeLists.txt  README.md  libswcs.spec
debian/: changelog  control  copyright  libswcs-dev.install
swcs/: chars.c  charset.c  charset.h  charset_maps.h  japanese.c  tokenizer.c  tokenizer.h
test/: .main.c.swp  main.c  test_result.txt
test/test_tokenizer/: main.c
utils/: charstat.cpp  gen.cpp  test_tri.cpp  trigrams.h
