PROJECT (swcs)
CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
INCLUDE (CMakeMacro.cmake)

#USE_PACKAGE (coda coda/coda.h)

SET(GCC_COMPILE_FLAGS "")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GCC_COMPILE_FLAGS}")

INCLUDE_DIRECTORIES (.)

AUX_SOURCE_DIRECTORY (swcs SRC_SWCS)
ADD_LIBRARY (swcs STATIC ${SRC_SWCS})

AUX_SOURCE_DIRECTORY (test/ SRC_TEST_SWCS)
ADD_EXECUTABLE (test_swcs ${SRC_TEST_SWCS})
TARGET_LINK_LIBRARIES (test_swcs swcs)

INSTALL (FILES swcs/charset.h DESTINATION include/swcs)
INSTALL (TARGETS swcs DESTINATION ${LIBDIR})

