PROJECT (swcs)
CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
INCLUDE (CMakeMacro.cmake)

#USE_PACKAGE (coda coda/coda.h)

SET(GCC_COMPILE_FLAGS "")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GCC_COMPILE_FLAGS}")

INCLUDE_DIRECTORIES (.)

AUX_SOURCE_DIRECTORY (swcs SRC_SWCS)
ADD_LIBRARY (swcs STATIC ${SRC_SWCS})

AUX_SOURCE_DIRECTORY (test/ SRC_TEST_SWCS)
ADD_EXECUTABLE (test_swcs ${SRC_TEST_SWCS})
TARGET_LINK_LIBRARIES (test_swcs swcs)

ADD_EXECUTABLE (swcs_charstat utils/charstat.cpp)
TARGET_LINK_LIBRARIES (swcs_charstat swcs)

SET (SRC_GEN_TRIGRAMS utils/gen.cpp)
ADD_EXECUTABLE (gen_tri ${SRC_GEN_TRIGRAMS})
TARGET_LINK_LIBRARIES (gen_tri swcs)

SET (SRC_TEST_TRIGRAMS utils/test_tri.cpp)
ADD_EXECUTABLE (test_tri ${SRC_TEST_TRIGRAMS})
TARGET_LINK_LIBRARIES (test_tri swcs)

ADD_EXECUTABLE (test_tokenizer test/test_tokenizer/main.c)
TARGET_LINK_LIBRARIES (test_tokenizer swcs)
  
INSTALL (FILES swcs/charset.h swcs/tokenizer.h DESTINATION include/swcs)
INSTALL (TARGETS swcs DESTINATION ${LIBDIR})

